test_regress/t/t_case_default_bad.out
%Error: t/t_case_default_bad.v:15: Multiple default statements in case statement.
%Error: Exiting due to
